# eqtex

./: .gitignore  License.txt  pyproject.toml  readme.md
eqtex/: main.py  texconverter.py
eqtex/defaults/: default_preamble.tex
src/: main.py  texconverter.py
src/defaults/: default_preamble.tex
src/myapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
