[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eqtex"
version = "0.1.0"
description = "A tool to convert latex equations into images through the commandline."
authors = [{ name = "T.G. Hiranandani", email = "you@example.com" }]
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
eqtex = "eqtex.main:app"
